fixed overflowbug

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -6,6 +6,7 @@
 .home {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .home__topRight {
